//
// Created by escoba_j on 29/11/2016.
//

#ifndef HEARTHSTONERESOLVER_EVENTHANDLER_H
#define HEARTHSTONERESOLVER_EVENTHANDLER_H


class EventHandler {

};


#endif //HEARTHSTONERESOLVER_EVENTHANDLER_H
