//
// Created by escoba_j on 29/11/2016.
//

#ifndef HEARTHSTONERESOLVER_GAME_H
#define HEARTHSTONERESOLVER_GAME_H


class Game {

};


#endif //HEARTHSTONERESOLVER_GAME_H
